[metadata]
name = imax_b8_serial
description = Serial interface to monitor LiPo charger.
long_description = file: README.rst
keywords = hacktoberfest
author = Barnaby Shearer
author_email = b@zi.is
repository = "https://github.com/BarnabyShearer/imax_b8_serial"
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires = 
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[bdist_wheel]
universal=1
