[metadata]
name = imax_b8_serial
description = Serial interface to monitor LiPo charger.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
author = Barnaby Shearer
author_email = b@zi.is
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
project_urls =
    Source = https://github.com/BarnabyShearer/imax_b8_serial
    Tracker = https://github.com/BarnabyShearer/imax_b8_serial/issues
    Documentation = https://imax_b8_serial.readthedocs.io/en/latest/

[options]
packages = find:
install_requires = 
    pyserial
python_requires = >=3.7

[options.package_data]
* = py.typed, *.c, *.h

[options.entry_points]
console_scripts = 
    imax_b8_serial = imax_b8_serial.__main__:main

[bdist_wheel]
universal=1
